[metadata]
name = poetry
version = 1.0.10

[options]
packages = poetry
install_requires =
  cleo>=0.7.6
  clikit>=0.4.2
  requests>=2.18
  cachy>=0.3.0"
  requests-toolbelt>=0.8.0
  jsonschema>=3.1
  pyrsistent>=0.14.2
  pyparsing>=2.2
  cachecontrol[filecache]>=0.12.4
  pkginfo>=1.4
  html5lib>=1.0
  shellingham>=1.1
  tomlkit>=0.5.11
  pexpect>=4.7.0
